<resources>
    <string name="app_name">ImageEditLibrary</string>
    <string name="no_images">no found the image</string>
    <string name="images">%d images</string>
    <string name="save">next</string>
    <string name="apply">apply</string>

    <string name="stickers">stickers</string>
    <string name="fliter">filter</string>
    <string name="crop">crop</string>
    <string name="rotate">rotate</string>
    <string name="text">text</string>
    <string name="edit">paint</string>


    <string name="materialcolorpicker__app_name">Android Material Color Picker Dialog</string>
    <string name="materialcolorpicker__descLib">Material Color Picker Dialog</string>
    <string name="materialcolorpicker__errHex">Hex Code Format incorrect</string>
    <string name="materialcolorpicker__inputColor">Color:</string>
    <string name="materialcolorpicker__btnSelectColor">Select</string>
    <string name="saving_image">save...</string>
    <string name="input_hint">input text ...</string>

    <string name="no_choose">please choose a image for edit</string>

    <string-array name="fliters">
        <item>Origin</item>
        <item>Soft</item>
        <item>Black</item>
        <item>Classic</item>
        <item>Gorgeous</item>
        <item>Retro</item>
        <item>Grace</item>
        <item>Film</item>
        <item>Memory</item>
        <item>Yogurt</item>
        <item>Fleeting</item>
        <item>Shine</item>
    </string-array>

    <string name="more">more</string>
</resources>
