<!--<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:id="@+id/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="fill_parent"--><!--android:scrollbars="none">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/btn_paint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/ic_paint_tools"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size" />

    <ImageView
        android:id="@+id/btn_fliter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/ic_filter"
        android:text="@string/fliter"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size" />

    <ImageView
        android:id="@+id/btn_stickers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/ic_moustache"
        android:text="@string/stickers"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size" />

    <ImageView
        android:id="@+id/btn_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/ic_emoji"
        android:text="@string/stickers"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size" />

    <ImageView
        android:id="@+id/btn_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/ic_frame"
        android:text="@string/stickers"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/btn_crop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/ic_crop"
        android:text="@string/crop"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/btn_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/ic_rotate"
        android:text="@string/rotate"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_edit_menu_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/ic_text"
        android:text="@string/text"
        android:textColor="@color/white"
        android:textSize="@dimen/image_edit_text_size" />

</LinearLayout><!--</HorizontalScrollView>-->

